--- a/dts/arm/nxp/nxp_s32k146.dtsi
+++ b/dts/arm/nxp/nxp_s32k146.dtsi
@@ -59,3 +59,11 @@
 &lpspi2 {
 	clocks = <&clock NXP_S32_LPSPI2_CLK>;
 };
+
+&flexcan1 {
+	clocks = <&clock NXP_S32_FLEXCAN1_CLK>;
+};
+
+&flexcan2 {
+	clocks = <&clock NXP_S32_FLEXCAN2_CLK>;
+};
