tests: drivers: eeprom: add overlay for ucans32k1sic
Add overlay to test I2C/EEPROM on ucans32k1sic board.

Signed-off-by: Manuel Argüelles <manuel.arguelles@nxp.com>

--- a/tests/drivers/eeprom/api/testcase.yaml
+++ b/tests/drivers/eeprom/api/testcase.yaml
@@ -14,6 +14,7 @@ tests:
       - qemu_x86
       - nucleo_l152re
       - nucleo_l073rz
+      - ucans32k1sic
     integration_platforms:
       - qemu_x86
   drivers.eeprom.api.w_at2x_emul:
