--- a/boards/arm/ucans32k1sic/ucans32k1sic.dts
+++ b/boards/arm/ucans32k1sic/ucans32k1sic.dts
@@ -7,6 +7,7 @@
 /dts-v1/;
 #include <zephyr/dt-bindings/gpio/gpio.h>
 #include <zephyr/dt-bindings/input/input-event-codes.h>
+#include <zephyr/dt-bindings/pwm/pwm.h>
 #include <arm/nxp/nxp_s32k146.dtsi>
 #include "ucans32k1sic-pinctrl.dtsi"
 
@@ -26,6 +27,7 @@
 		led0 = &led1_red;
 		led1 = &led1_green;
 		led2 = &led1_blue;
+		pwm-led0 = &led1_red_pwm;
 		sw0 = &button_3;
 		i2c-0 = &lpi2c0;
 	};
@@ -45,6 +47,23 @@
 			gpios = <&gpiod 0 GPIO_ACTIVE_LOW>;
 			label = "LED1_RGB_BLUE";
 		};
+	};
+
+	pwmleds {
+		compatible = "pwm-leds";
+
+		led1_red_pwm: led_pwm_0 {
+			pwms = <&ftm0 0 PWM_MSEC(20) PWM_POLARITY_INVERTED>;
+			label = "LED1_RGB_RED_PWM";
+		};
+		// led1_green_pwm: led_pwm_1 {
+		// 	pwms = <&ftm0 1 PWM_MSEC(20) PWM_POLARITY_INVERTED>;
+		// 	label = "LED1_RGB_GREEN_PWM";
+		// };
+		// led1_blue_pwm: led_pwm_2 {
+		// 	pwms = <&ftm0 2 PWM_MSEC(20) PWM_POLARITY_INVERTED>;
+		// 	label = "LED1_RGB_BLUE_PWM";
+		// };
 	};
 
 	gpio_keys {
@@ -104,3 +123,27 @@
 	pinctrl-names = "default";
 	status = "okay";
 };
+
+&ftm0 {
+	compatible = "nxp,kinetis-ftm-pwm";
+	#pwm-cells = <3>;
+	pinctrl-0 = <&ftm0_default>;
+	pinctrl-names = "default";
+	status = "okay";
+};
+
+// &ftm1 {
+// 	compatible = "nxp,kinetis-ftm-pwm";
+// 	#pwm-cells = <3>;
+// 	pinctrl-0 = <&ftm1_default>;
+// 	pinctrl-names = "default";
+// 	status = "okay";
+// };
+
+// &ftm2 {
+// 	compatible = "nxp,kinetis-ftm-pwm";
+// 	#pwm-cells = <3>;
+// 	pinctrl-0 = <&ftm2_default>;
+// 	pinctrl-names = "default";
+// 	status = "okay";
+// };
